unpackaged/main/default/objects/project_cloud__Time_Options__c/project_cloud__Time_Options__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Time Options</label>
</CustomObject>