unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Automatically_Approve_Time_Entries__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Automatically_Approve_Time_Entries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should Time Entries be Submitted for approval as soon as they are created?</description>
    <label>Automatically Submit Time Entries</label>
    <type>Checkbox</type>
</CustomField>