unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Grace_After_Completed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Grace_After_Completed__c</fullName>
    <defaultValue>14</defaultValue>
    <inlineHelpText>The number of days after a Project Task has closed before it is no longer available on the Timecard. If no value is specified a default value of 14 days is used</inlineHelpText>
    <label>Grace Period - Completed Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>