unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Grace_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Grace_Before_Start__c</fullName>
    <inlineHelpText>The number of days before a Project Task starts when it is available on the Timecard. 0 is always show. The default value is 0.</inlineHelpText>
    <label>Grace Period - Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>