unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Hide_Create_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hide_Create_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the Create Time Entry button be included on the timecard</description>
    <label>Hide Create Time Entry</label>
    <type>Checkbox</type>
</CustomField>