unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Hide_Daily_Assistant__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hide_Daily_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Daily Assistant from Timecard</description>
    <inlineHelpText>Selecting this check-box will hide the daily assistant tab from the timecard</inlineHelpText>
    <label>Hide the daily assistant tab</label>
    <type>Checkbox</type>
</CustomField>