unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Show_Approvals__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Show_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the Submit for Approval Related List be included on the timecard</description>
    <label>Show Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>