unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Allocations__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Allocations__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should Calendar Allocations be included in the timecard genius suggestions</description>
    <label>Suggest Allocations</label>
    <type>Checkbox</type>
</CustomField>