unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Chatter__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should Chatter comments be used to populate the suggested time entries section</description>
    <inlineHelpText>Selecting this check-box will show any records a user has added chatter comments to, in the users Timecard Genius</inlineHelpText>
    <label>Suggest Chatter</label>
    <type>Checkbox</type>
</CustomField>