unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Columns__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Columns__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>The maximum number of columns that can be displayed in the Timecard Genius</inlineHelpText>
    <label>Suggest Columns</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>