unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Events__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Events__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should Events be used to populate the suggested time entries section</description>
    <inlineHelpText>Selecting this check-box will show any records a user has a Salesforce event tied to, in the users Timecard Genius</inlineHelpText>
    <label>Suggest Events</label>
    <type>Checkbox</type>
</CustomField>