unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_History_Tracking__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_History_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should Field History Tracking changes be used to populate the suggested time entries section</description>
    <inlineHelpText>Selecting this check-box will show any records a user has modified where the field is tracked in field history tracking, in the users Timecard Genius</inlineHelpText>
    <label>Suggest Field History Tracking</label>
    <type>Checkbox</type>
</CustomField>