unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Include_Existing__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Include_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should suggested entries be shown for records that already have a time entry?</description>
    <inlineHelpText>Selecting this check-box will show any records returned by the Timecard Genius regardless of if there is already a time entry for the week for the same record. (It is recommended to leave this check-box unchecked).</inlineHelpText>
    <label>Suggest Include Existing</label>
    <type>Checkbox</type>
</CustomField>