unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Notes__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Notes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should notes be used to populate the suggested time entries section</description>
    <inlineHelpText>Selecting this check-box will show any records a user has added a note to, in the users Timecard Genius</inlineHelpText>
    <label>Suggest Notes</label>
    <type>Checkbox</type>
</CustomField>