unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Suggest_Tasks__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Suggest_Tasks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should Tasks be used to populate the suggested time entries section</description>
    <inlineHelpText>Selecting this check-box will show any records a user has a Salesforce Task attached to, in the users Timecard Genius</inlineHelpText>
    <label>Suggest Tasks</label>
    <type>Checkbox</type>
</CustomField>