unpackaged/main/default/objects/project_cloud__Time_Options__c/fields/project_cloud__Time_Entry_Visibility_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Time_Entry_Visibility_Project_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Time Entry for Project Tasks</label>
    <type>Checkbox</type>
</CustomField>